--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
         </div>
 
-        <audio src="./music./heatwaves.mp3" id="audio"></audio>
+        <audio src="./music/heatwaves.mp3" id="audio"></audio>
 
         <div class="img-container">
-            <img src="./images./heatwaves.jpg" alt="music-cover" id="cover" />
+            <img src="./images/heatwaves.jpg" alt="music-cover" id="cover" />
         </div>
 
         <div class="navigation">
