--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="music-container">
         <div class="music-info">
-            <h4 id="title">Heatwaves</h4>
+            <h4 id="title">Hit Play!</h4>
             <div class="progress-container">
                 <div class="progress"></div>
             </div>
@@ -23,7 +23,7 @@
         <audio src="./music/Heatwaves.mp3" id="audio"></audio>
 
         <div class="img-container">
-            <img src="./images/Heatwaves.jpg" alt="music-cover" id="cover" />
+            <img src="./images/Tab_Icon.png" alt="music-cover" id="cover" />
         </div>
 
         <div class="navigation">
